--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native/eslint-config": "^0.73.2",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.6.7",
     "expo": "~50.0.6",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
@@ -26,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-dotenv": "^3.4.10",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
@@ -33,6 +36,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "eslint": "^8.56.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.2",
     "react-test-renderer": "18.2.0",
