--- a/app.json
+++ b/app.json
@@ -34,6 +34,20 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "022988d4-1049-4ab6-b339-7c4d9126bedf"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/022988d4-1049-4ab6-b339-7c4d9126bedf"
     }
   }
 }
